<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.AlbumCreateFragment">

    <TextView
        android:id="@+id/addTrackName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:paddingTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/add_track_to_album"
        android:textColor="@color/list_item_title_primary"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/list_item_title_primary"
        android:padding="8dp"
        android:text="@string/track"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/track_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="8dp"
            android:backgroundTint="#FFFFFF"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/durationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/list_item_title_primary"
        android:padding="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/durationInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mm_ss">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/durationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:inputType="text"
            android:backgroundTint="#FFFFFF"
            android:padding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_track_uppercase"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/TextGray"
        android:textSize="18sp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
