...
                    android:textColor="@color/title_primary"
                    android:textDirection="locale"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addTrackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:backgroundTint="#77D353"
                    android:text="@string/add_track"
                    android:textColor="#343F4B" />
...
