<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/albumListFragment"
        android:icon="@drawable/ic_albums_menu_item_24"
        android:title="@string/title_albums_menu" />
    <item
        android:id="@+id/artistListFragment"
        android:icon="@drawable/ic_artists_menu_item_24"
        android:title="@string/menu_artist_option" />
    <item
        android:id="@+id/collectorListFragment"
        android:icon="@drawable/ic_collectors_menu_item_24"
        android:title="@string/title_collectors_list_menu" />
</menu>