...
    <string name="title_albums_list_fragment">My Albums</string>
    <string name="see_album_from_list_fragment">See Album Detail</string>

    <string name="title_artists_list_fragment">My Artists</string>
    <string name="title_collectors_list_menu">Collectors</string>
    <string name="title_collectors_list_fragment">My Collectors</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_album">Add Album</string>
    <string name="album_title_hint">Album title</string>
    <string name="cover_image_url_hint">https://</string>
    <string name="create_album_button_text">Create</string>
    <string name="create">Create</string>
    <string name="create_new_album">Create New Album</string>
    <string name="title">Title</string>
    <string name="https">https://</string>
    <string name="album_title">Album title</string>
    <string name="cover_image_url">Cover Image URL</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="release_date">Release Date</string>
...
