<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="collector" type="co.edu.uniandes.misw4203.group18.backvynils.models.Collector" />
        <variable name="comments" type="co.edu.uniandes.misw4203.group18.backvynils.models.Comments" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CollectorDetail">

        <TextView
            android:id="@+id/collectorName"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@{collector.name}"
            android:textSize="35sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/collectorTel"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@{collector.telephone}"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/collectorMail"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@{collector.email}"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/collectorArtist"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/favorite_performer"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collectorDetailRecyclerView"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            tools:listitem="@layout/artist_item"
            android:layout_height="100dp"/>

        <TextView
            android:id="@+id/collectorComment"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/last_comment"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/collectorCommentText"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@{comments.description}"
            android:textSize="20sp"/>

        <!--<TextView
            android:id="@+id/collectorCommentRating"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:text="@{comments.rating}"
            android:textSize="20sp"/>-->
    </LinearLayout>
</layout>
